tasks/testsuite/fixtures/parser-misc/fail/stmt-class-static-blocks-in-ts-with-invalid-modifier-4.ts
class Foo { private static { 1 + 1 }; }